opa-kubernetes/05-block-latest/latest-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLatest
metadata:
  name: block-latest
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
