opa-kubernetes/05-block-latest/latest-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblocklatest
spec:
  crd:
    spec:
      names:
        kind: K8sBlockLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocklatest

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("image '%v' uses latest tag which is not allowed", [container.image])
        }
